# Cognimend

./: .dockerignore  .env.example  .gitignore  Makefile  OPENROUTER_SUMMARY.txt  README.md  audit_schema.py  check_admin.py  check_platform_roles.py  check_roles.py  custom_test.py  docker-compose.prod.yml  force_reset.py  improve_confidence.py  init_enterprise_rbac.sql  list_columns.py  massive_test.py  rename_project.py  run_both_tests.bat  run_sql.py  run_tests.bat  sample.txt  start_services.py  step.txt  test_ai_doc.txt  test_api.ps1  test_or.py  test_run.ps1  test_services.ps1  test_upload.ps1  update_admin_email.py  update_admin_password.py  vela_advanced_test.py  vela_standalone_test.py  vela_test_loop.py  vela_test_report.json
.github/workflows/: ci-cd.yaml  ci.yml  deploy.yml  performance.yaml  quality-gates.yml  rollback.yaml  security.yml  test.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.test  Makefile  QUICK_REFERENCE.txt  build-images.ps1  build-images.sh  check_setup.ps1  cleanup.sh  docker-compose.test.yml  docker-compose.yml  docker-helper.ps1  docker.ps1  generate_improvements.py  load_test.py  prometheus.yml  pyproject.toml  pytest.ini  requirements-rag.txt  requirements.txt  setup_database.py  start.bat  start.sh  stop.sh  test-docker-setup.ps1  test-docker-setup.sh  test_doc.txt  test_handbook.txt  test_monitoring.py  test_reliability.py  test_results.txt  use-docker.ps1  verify_openrouter.py
backend/.github/: dependabot.yml
backend/.github/workflows/: security-audit.yml
backend/config/: production.py  rag-max-confidence.yaml
backend/core/: monitoring.py  openai_client.py  openrouter_client.py
backend/infrastructure/kubernetes/: ha-databases.yaml  ha-services.yaml
backend/scripts/: backup.bat  backup.py  create_placeholders.py  create_portal_test_accounts.py  create_super_admin.py  generate-lockfile.ps1  reset_admin_password.py  restore.bat  restore.py  security-audit.ps1  seed_plans.sql  start-local.ps1  test-local.ps1  verify_gateway_hardening.py
backend/services/: __init__.py
backend/services/auth/: Dockerfile  main.py  requirements.txt
backend/services/controller/: Dockerfile  Dockerfile.optimized  main.py  repair_rules.py  requirements.txt
backend/services/controller/tests/: test_controller.py
backend/services/drift_detector/: Dockerfile  Dockerfile.optimized  main.py  requirements.txt
backend/services/evaluation/: Dockerfile  Dockerfile.optimized  __init__.py  main.py  rag_driftbench.py  requirements.txt
backend/services/evaluation/tests/: test_phase3.py
backend/services/faithfulness_verifier/: __init__.py  metrics.py  verifier.py
backend/services/gateway/: Dockerfile  billing.py  database.py  main.py  requirements.txt
backend/services/privacy/: __init__.py  router.py
backend/services/query/: Dockerfile  Dockerfile.optimized  main.py  main_production.py  requirements.txt  trust_engine.py
backend/services/query/core/: rag_engine.py
backend/services/shared/: Dockerfile.base  __init__.py  actions.py  backpressure.py  cache.py  cache_service.py  chaos.py  circuit_breaker.py  config.py  consistency.py  correlation.py  database.py  database_scaling.py  db_security.py  document_processor.py  exceptions.py  failover.py  health.py  metrics.py  permissions.py  privacy.py  query_optimizer.py  query_processor.py  rate_limiting.py  redis_client.py  reliability.py  requirements-base.txt  resilience.py  security.py  shutdown.py  tracing.py  utils.py  validation.py  vector_db_scaling.py
backend/services/super_admin/: main.py  requirements.txt
backend/services/telemetry/: Dockerfile  Dockerfile.optimized  main.py  requirements.txt
backend/services/tests/: __init__.py  conftest.py  test_chaos.py  test_comprehensive.py  test_endpoints.py  test_integration.py
backend/services/tests/test_shared/: test_actions.py  test_cache.py  test_document_processor.py  test_exceptions.py  test_query_processor.py  test_resilience.py  test_utils.py
backend/services/upload/: Dockerfile  Dockerfile.optimized  main.py  requirements.txt
backend/services/workspace_admin/: main.py
backend/tests/: conftest.py  requirements-test.txt  test_admin_access.py  test_controller_evidence_aware.py  test_trust_engine.py
backend/tests/e2e/: test_complete_workflow.py
backend/tests/integration/: __init__.py  test_upload_query_integration.py
backend/tests/load/: comprehensive-test.js  locustfile.py  stress-test.sh
backend/tests/unit/: __init__.py  test_controller.py  test_drift_detector.py  test_query_service.py  test_upload_service.py
database/migrations/: 001_initial_schema.sql  002_performance_indexes.sql  003_scaling_optimizations.sql  004_saas_schema.sql  005_rag_quality_layer.sql  006_evaluation_hardening.sql  007_notifications.sql  (+3 more)
docs/: API_DOCUMENTATION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  SECURITY.md  TRUST_ENGINE.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  get_errors.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
infrastructure/: deploy.ps1  load_test.ps1
k8s/: configmap.yaml  controller-deployment.yaml  deploy.ps1  drift-detector-deployment.yaml  evaluation-deployment.yaml  grafana-dashboard-cost.json  grafana-dashboard-drift.json  grafana-dashboard-rag.json  ingress.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  pod-disruption-budgets.yaml  postgres-deployment.yaml  postgres-pv.yaml  prometheus-alerts.yaml  qdrant-deployment.yaml  qdrant-pv.yaml  query-deployment.yaml  query-hpa.yaml  redis-deployment.yaml  secrets.yaml  servicemonitor.yaml  telemetry-deployment.yaml  upload-deployment.yaml  upload-hpa.yaml
scripts/: deploy-to-k8s.ps1  install-monitoring.ps1  max-confidence.ps1  setup-minikube.ps1  verify-environment.ps1
tests/: test_saas_e2e_journey.py  test_saas_isolation.py
(+177 files in other folders)
