[project]
name = "cognimend-backend"
version = "1.0.0"
description = "Cognimend RAG backend"
readme = "README_FINAL.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cognimend Team", email = "team@example.com"}
]
keywords = ["rag", "llm", "fastapi", "microservices", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.9",
    "qdrant-client>=1.7.3",
    "redis>=5.0.1",
    "hiredis>=2.3.2",
    "pybreaker>=1.2.0",
    "tenacity>=8.2.3",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "prometheus-client>=0.19.0",
    "scipy>=1.11.4",
    "numpy>=1.26.3",
    "pypdf>=4.0.1",
    "python-docx>=1.1.0",
    "tiktoken>=0.5.2",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.6.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "pytest-xdist>=3.5.0",
]

[project.urls]
homepage = "https://github.com/example/cognimend"
documentation = "https://github.com/example/cognimend#readme"
repository = "https://github.com/example/cognimend"

# =============================================================================
# UV Configuration (Modern, Fast Package Manager)
# Install: pip install uv OR curl -LsSf https://astral.sh/uv/install.sh | sh
# =============================================================================

[tool.uv]
# Use system Python if available
python-preference = "system"

# Resolution settings
resolution = "highest"

# Dev dependencies (installed with `uv sync --dev`)
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pip-audit>=2.7.0",
]

# =============================================================================
# Ruff Configuration (Fast Python Linter & Formatter)
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ARG", "PLR2004"]
"**/migrations/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MyPy Configuration (Static Type Checking)
# =============================================================================

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "migrations",
    "tests",
    ".venv",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["services/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["services", "core"]
branch = true
omit = [
    "**/tests/**",
    "**/__pycache__/**",
    "**/migrations/**",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 30
show_missing = true

# =============================================================================
# pip-audit Configuration
# =============================================================================

[tool.pip-audit]
require-hashes = false
vulnerability-service = "osv"
